--- a/resume.qmd
+++ b/resume.qmd
@@ -1,88 +1,45 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Cannon Roach's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
-
-<div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
-</div>
+# Cannon Roach
+Computer Scientist.
 
 
 ## Currently
 
-Standing on the shoulders of giants
+Half way to my bachelors degree.
 
 ### Specialized in
 
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
-
+C#, Python, Java, Javascript, C++, and CSS/HTML
 
 ### Research interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+Recursion, 3D game engines, and databases.
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2020 - 2024`
+__Madison High School.__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
-
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
-
-
+`2021 - now`
+__BYU Idaho__
 
 ## Awards
 
-`2012`
-President, *Royal Society*, London, UK
-
-Associate, *French Academy of Science*, Paris, France
-
-
-
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
+`2024`
+Certificate of Software engineering
 
 
 ## Occupation
 
-`1600`
-__Royal Mint__, London
+`2022 - now`
+__ACW Cards__, Idaho
 
-- Warden
-- Minted coins
-
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
-
-
+- Shipping
+- Sorting
 
 <!-- ### Footer
 
